syntax = "proto3";
import "google/protobuf/timestamp.proto";

package api.v1;
option go_package = "./pb";

message CategoryMeta {
  string icon = 1;
}

message Category {
  enum Status {
    UNKNOWN = 0;
    ACTIVE = 1;
    INACTIVE = 2;
  }

  string ID = 1 [json_name = "id"]; // @gotags: db:"id"
  string name = 2; // @gotags: db:"name"
  string slug = 3; // @gotags: db:"slug"
  Status status = 4; // @gotags: db:"status"
  CategoryMeta meta = 5; // @gotags: db:"meta"
  google.protobuf.Timestamp created_at = 8 [json_name = "created_at"]; // @gotags: db:"created_at"
  google.protobuf.Timestamp updated_at = 9 [json_name = "updated_at"]; // @gotags: db:"updated_at"
  google.protobuf.Timestamp deleted_at = 10 [json_name = "deleted_at"]; // @gotags: db:"deleted_at"
}