syntax = "proto3";

import "validate/validate.proto";
import "category.proto";

package api.v1;
option go_package = "./pb";

message GetCategoryByIDRequest {
  string ID = 1 [(validate.rules).string = {uuid:true}, json_name = "id"];
}

message GetCategoryBySlugRequest {
  string slug = 1 [(validate.rules).string = {min_len:0}];
}

message GetCategoryResponse {
  Category category = 1;
}

message GetCategoriesRequest {} // TODO: add pagination

message GetCategoriesResponse {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  string name = 1;
}

message CreateCategoryResponse {
  Category category = 1;
}

message UpdateCategoryRequest {
  string ID = 1 [(validate.rules).string = {uuid:true}, json_name = "id"];
  string name = 2 [(validate.rules).string = {min_len:0}];
  Category.Status status = 3 [(validate.rules).enum = {in:[]}];
  CategoryMeta meta = 4 [(validate.rules).any = {required:true}];
}

message UpdateCategoryResponse {
  Category category = 1;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse);
  rpc GetCategory(GetCategoryByIDRequest) returns (GetCategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
}